--- a/BarCodeSvannerDemo/Base.lproj/Main.storyboard
+++ b/BarCodeSvannerDemo/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="height" constant="50" id="rIY-QN-eey"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="SCAN">
                                     <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                 </state>
                                 <connections>
